# dans-vk2

./: .clang-tidy  .clangd  .gitattributes  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  _build_common.sh  dbg.ps1  dbg.sh  dev.ps1  dev.sh  run.sh  run_opt.ps1  run_opt.sh  watcher.sh
app/: main.cpp
include/dans/: concepts.hpp  types.hpp
src/: engine.hpp
src/dans/: chrono.hpp  dev.hpp  fix_str.hpp  format.hpp  logic.hpp  strings.hpp  to_string.hpp  validity.hpp
src/platform/: platform.cpp  platform.hpp
src/vk/: pch.hpp  vk_config.cpp  vk_config.hpp  vk_context.cpp  vk_context.hpp  vk_types.hpp
tools/: check_self_contained.py  format_includes.py
